# conjure

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md
examples/: basic-io.cpp  generator.cpp  pipeline.cpp  producer-consumer.cpp  suspend.cpp  wait.cpp  yield-and-resume.cpp  yield-life-cycle.cpp
src/: conjurer.h  conjury.h  context-switch.S  coroutine.h  function-wrapper.h  gen-iterator.h  scheduler.h  state.h  test.cpp  test2.cpp  test3.cpp  test4.cpp
src/conjure/: config.h  conjurer.h  conjury.h  exceptions.h  function-wrapper.h  gen-iterator.h  interfaces.h  log.h  scheduler.cpp  scheduler.h  stack.h  stage.h  state.h  system.h  value-tunnel.h
src/conjure/io/: interfaces.h  job.h  operation.h  sync-queue.h  worker-pool.h
